--- a/content/reactive/_index.Rmd
+++ b/content/reactive/_index.Rmd
@@ -14,6 +14,15 @@ Let's add another output to the app; we'll show which country is the richest dis
 
 To do this, we'll make the a reactive expression, which contains the data we want to plot.  A rective expression is an expression whose value can change during the running of the app.   As mentioned previously, the reactive programming approach means that Shiny will keep track of when reactive expressions have become invalid (for example, if their inputs have changed - in this example if `year` or `continent` change), and will then recalculate them automatically.  
 
+Schematically, we have:
+
+{{<mermaid align="left" >}}
+graph LR;
+   A[input$year] --> B[plotData]
+   B --> C[output$gapminderPlot]
+   D[input$continent] --> B
+{{< /mermaid >}}
+
 Let's make the plotted data a reactive expression. We add the following code to the `server()` function:
 
 ```{r, eval = FALSE}
