Get slides in sync with website.  Spell check website

--- a/content/basics/_index.Rmd
+++ b/content/basics/_index.Rmd
@@ -16,15 +16,15 @@ The most straightforward way of creating a new Shiny app is to use R Studio.  Fr
 Choose a suitable name for your app (e.g. "gapminder").   Leave the other options as their defaults ("Single File", and Create within directory: `~/mawdsley`).  [git:01_defaultapp]()
 
 {{% notice info %}}
-When we create a new Shiny app we can create a single file (`app.R`), or as two separate files (`ui.R` and `server.R`).   The latter format used to be the only method of definining an Shiny app, but can still be useful when building a more complicated app, as it allows us to separate the user interface (`ui.R`) from the server logic (`server.R`).  As we will be building a relatively small app, we'll use the single file approach.  
+When we create a new Shiny app we can create a single file (`app.R`), or as two separate files (`ui.R` and `server.R`).   The latter format used to be the only method of defining an Shiny app, but can still be useful when building a more complicated app, as it allows us to separate the user interface (`ui.R`) from the server logic (`server.R`).  As we will be building a relatively small app, we'll use the single file approach.  
 
 When we create a new Shiny app in R Studio, it creates an example app that allows us to alter the number of bins in a histogram.  This uses an example data-set that is provided with R of the waiting times for the eruption of the "Old Faithful" geyser.
 {{% /notice %}}
 
-We can run the app by pressing the "Run App" button in the toolbar (or by pressing Ctrl+Shift+Enter).  This will launch an browser window within R Studio where we can interact with our app.  
+We can run the app by pressing the "Run App" button in the tool-bar (or by pressing Ctrl+Shift+Enter).  This will launch an browser window within R Studio where we can interact with our app.  
 
 {{% notice tip %}}
-There is a cheat sheet for Shiny included with RStudio.  This can be accessed from the menu: Help, Cheatsheets, Web Applications with shiny.
+There is a cheat sheet for Shiny included with R Studio.  This can be accessed from the menu: Help, Cheatsheets, Web Applications with shiny.
 {{% /notice %}}
 
 ## Loading our libraries and functions
