--- a/WorkshopSlides.Rmd
+++ b/WorkshopSlides.Rmd
@@ -31,7 +31,7 @@ source("coursematerial/workshopFunctions.R")
 - Shiny lets us easily and quickly build web apps using R
 - Can use pretty much any output from R within our app
 - And control it using widgets
--[Shiny gallery](https://shiny.rstudio.com/gallery/)
+- [Shiny gallery](https://shiny.rstudio.com/gallery/)
   
 ## Why (not?) use Shiny
 
@@ -41,61 +41,23 @@ source("coursematerial/workshopFunctions.R")
     - And packages for others
 <p>
 - Awkward to scale
-- Non-free pro version needed for some features
-
-##
-
-
-<iframe src="https://mawds.shinyapps.io/worked_example/" style="border:none; width:100%;  height:700px"></iframe>
+- Non-free pro version needed for some server features
 
 ## [Gapminder](https://www.gapminder.org) 
 
 [![Gapminder Video](http://img.youtube.com/vi/jbkSRLYSojo/0.jpg)](https://youtu.be/jbkSRLYSojo?t=90)
 
-## Static visualisation
+##
 
-```{r}
-gapminder %>% 
-  filter(year == 1817) %>% 
-  produceGapminderPlot()
-```
+<iframe src="https://mawds.shinyapps.io/worked_example/" style="border:none; width:100%;  height:700px"></iframe>
 
-## Static visualisation
+## Workshop Aims
 
-```{r}
-gapminder %>% 
-  filter(year == 1917) %>% 
-  produceGapminderPlot()
-```
-
-## Static visualisation
-
-```{r}
-gapminder %>% 
-  filter(year == 2017) %>% 
-  produceGapminderPlot()
-
-```
-
-## Static visualisation
-
-```{r}
-historicData <- gapminder %>% 
-  filter(country == "United Kingdom")
-
-gapminder %>% 
-  filter(year == 2017) %>% 
-  produceGapminderPlot(makeSemiTransparent = TRUE) %>% 
-  addHistoricPlot(historicData)
-```
-
-## Workshop aims
-
-- To use Shiny to make an interactive version of the plot
+- To use Shiny to make an interactive plot
     - Select / animate the year
     - Only plot data for selected continents
-    - Identify a country by selecting it
-    - Show "trajectory" for selected country
+    - Deploy the app to shinyapps.io
+    - Show the richest country on the gaph and its GDP
 
 ## Getting started
 
@@ -105,51 +67,42 @@ gapminder %>%
 rstudio
 ```
 
-* `coursematerial` contains the data and plotting functions we will use.
+* `gapminder.rds` contains the gapminder data
+
+* `workshopFunctions.R` contains the functions we will use.
+    * These are mostly to make it easier to make the plots, and to avoid this turning into a ggplot workshop.
+
 
 * `codeExample.R` shows how to use the plotting functions.
-
-##
-
-```{r, echo = TRUE, fig.height=4, fig.width=5}
-gapminder %>% 
-  filter(year == 2017) %>% 
-  produceGapminderPlot()
-
-```
-
-
-##
-
-```{r, echo = TRUE, fig.height=4, fig.width=5}
-historicData <- gapminder %>% 
-  filter(country == "United Kingdom")
-
-gapminder %>% 
-  filter(year == 2017) %>% 
-  produceGapminderPlot(makeSemiTransparent = TRUE) %>% 
-  addHistoricPlot(historicData)
-```
 
 ## Interactive exercises
 
 * The `coursematerial` folder is a git repository
 * Solutions are stored as tagged commits for code in the `worked_example` directory
-    * e.g [git:01_helloworld]() 
+    * e.g [git:01_defaultapp]() 
     * Link takes you to github's commit page
-    * Checkout versions with `git checkout helloworld`
+    * Checkout versions with `git checkout 01_defaultapp`
 
 * Make your own Shiny app in another directory
 
 ## Getting started
 
-* Make a new Shiny app and check it works: [git:01_helloworld]()
+* Make a new Shiny app and check it works: [git:01_defaultapp]()
     * File, New File, Shiny Web App
     * Name: gapminder
     * Single file
     * Create within directory: `~/mawdsley`
   
 * Run App using toolbar or <kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>Enter</kbd>
+
+## Exercise - getting ready for the rest of the course.
+
+* Copy the gapminder data and `workshopFunctions.R` to the app directory
+* Modify the app to load the ggplot2 and dplyr libraries, gapminder data and `workshopFunctions.R` 
+
+* Check your app still works.
+
+[git:02_loaddata]()
 
 ## Anatomy of a Shiny App - user interface
 
@@ -193,37 +146,6 @@ server <- function(input, output) {
 
 ```
 
-## Exercise - getting ready for the rest of the course.
-
-* Modify the app to load the ggplot2 and dplyr libraries, gapminder data and `plottingFunctions.R` 
-* Modify the app to show a (non interactive) gapminder plot instead of the histogram.
-    * `codeExample.R` may be useful.
-    * (Don't worry about changing the "bins" slider - we'll do that next)
-* Change the title of the app to something sensible
-
-[git:02_loadresources]()
-
-## Exercise
-
-- To use Shiny to make an interactive version of the plot
-    - **Select / animate the year**
-    - Only plot data for selected continents
-    - Identify a country by selecting it
-    - Show "trajectory" for selected country
-
-
-## Exercise
-
-- Modify the `sliderInput`; change  `inputId` to  "year" and use this to select a year. [git:03_yearslider]()
-    - The `sep` option will let you deal with the ","s in the years.
-    - `step` contols the interval between selectable values.
-- Use the `animate` option to allow this to run through the years [git:04_animate]()
-    - You may wish to explore `animationOptions()` to control the animation speed
-    
-- Use the slider to make the graph interactive.
-    - `input$year` will contain the value of the year
-[git:05_baseplot]()
-
 
 ## More widgets
 
@@ -235,152 +157,19 @@ server <- function(input, output) {
 
 ## Exercise
 
-- To use Shiny to make an interactive version of the plot
-    - ~~Select / animate the year~~
-    - **Only plot data for selected continents**
-    - Identify a country by selecting it
-    - Show "trajectory" for selected country
+- Add a `checkboxGroupInput()` widget to select the continents we wish to display on the graph
+- Change the title of the app in `titlePanel()` to something sensible
 
-## Exercise
+(This won't do anything yet - we'll connect it to the graph shortly)
 
-- [The Shiny Widget Gallery](https://shiny.rstudio.com/gallery/widget-gallery.html) lists built in widgets
-- Use a `checkboxGroupInput` to select continents. [git:06_continentUI]()
-    - `levels(gapminder$continent)` will return a vector of the continents in the data.
-    - The `selected` option controls which elements are selected at the start
+[git:03_continentwidget]()
 
-- Modify your server function to filter the data so that only the selected continents are shown. [git:07_continent]()
+## Exercises - Putting it all together
 
-## Making the graph interactive
-- To use Shiny to make an interactive version of the plot
-    - ~~Select / animate the year~~
-    - ~~Only plot data for selected continents~~
-    - **Identify a country by selecting it**
-    - Show "trajectory" for selected country
-
-## Demo:
-
-- `plotOutput("plotname", click = "clickName")` will output information about mouse clicks within a plot to the server.
-- To see the output of this we need to use `renderPrint()` to capture the output (cf. `renderPlot()`)
-- Which we then need to display in our user interface using `textOutput()` (cf. `plotOutput()`)
-[git:08_clickdata]()
-
-## Working with click data
-
-- Click output is in mapped coordinates (dependent on graph package)
-- Need to map coordinates to an entry in the data - `nearPoints()` does this for us
-  - We can look at the output of `nearPoints()` (optionally using `renderTable()` and `tableOutput()` to format things nicely)
-[git:09_nearpoints]()
-
-## Working with click data
-
-2 problems:
-
-1. `nearPoints()` is using _all_ the data, not just the current year
-    - Should be the data displayed on the graph
-2. As soon as the graph changes...the click event is lost
-    - Year advances
-    - Graph resizes
-
-## Solving problem 1
-
-- We make the filtered data _reactive_   [git:10_reactivedata]()
-    - Data which changes over time
-    - We need the active data in two places - for the graph and as input to `nearpoints()`.
-
-## Reactive data
-
-```{r}
-edges <- tribble(~v1, ~v2,
-                 "year", "plotData",
-                 "continent", "plotData",
-                 "plotData", "gapminderPlot",
-                 "plotClick", "showClick",
-                 "plotData", "showClick")
-
-
-
-g <- graph_from_edgelist(as.matrix(edges)) %>% 
-set_vertex_attr( "color", value = "red", index = c("year", "continent", "plotClick")) %>% 
-  set_vertex_attr( "color", value = "green", index = c("plotData")) %>% 
-  set_vertex_attr("color", value = "yellow", index = c("gapminderPlot", "showClick")) 
-
-layout <- structure(c(148, 200, 281, 121, 400, 287, 386, 200, 386, 4, 382, 
-0), .Dim = c(6L, 2L))
-
-plot(g, layout = layout)
-
-```
-
-## Solving problem 2
-
-- The `plotClick` becomes invalid every time the graph updates
-- We use `observeEvent()` to observe when a click happens, and store the click information
-- And only then do we update the active country [git:11_showselected]()
-
-##
-
-```{r}
-edges2 <- tribble(~v1, ~v2,
-                 "year", "plotData",
-                 "continent", "plotData",
-                 "year", "historicData",
-                 "activeCountry", "historicData",
-                 "plotData", "gapminderPlot",
-                  "historicData", "gapminderPlot",
-                 "activeCountry", "showClick",
-                 "plotClick", "activeCountry"
-                 )
-
-
-
-g2 <- graph_from_edgelist(as.matrix(edges2)) %>% 
-set_vertex_attr( "color", value = "red", index = c("year", "continent", "plotClick")) %>% 
-  set_vertex_attr( "color", value = "green", index = c("plotData", "historicData", "activeCountry")) %>% 
-  set_vertex_attr("color", value = "yellow", index = c("gapminderPlot", "showClick")) 
-
-layout2 <- structure(c(83, 117, 244, 247, 353, 77, 378, 381, 364, 170, 368, 
-171, 246, 0, 5, 371), .Dim = c(8L, 2L))
-
-g3 <- g2 %>% delete_vertices("historicData")
-layout3 <- layout2[!(V(g2)$name == "historicData"),]
-
-plot(g3, layout = layout3)
-```
-
-## Exercise: Workshop aims
-
-- To use Shiny to make an interactive version of the plot
-    - ~~Select / animate the year~~
-    - ~~Only plot data for selected continents~~
-    - ~~Identify a country by selecting it~~
-    - **Show "trajectory" for selected country**
-    
-```{r, fig.height=3, fig.width=5}
-historicData <- gapminder %>% 
-  filter(country == "United Kingdom")
-
-gapminder %>% 
-  filter(year == 2017) %>% 
-  produceGapminderPlot(makeSemiTransparent = TRUE) %>% 
-  addHistoricPlot(historicData)
-```
-
-
-##
-
-- We need to make another reactive data-set containing the historic data for the selected country
-- We need to add this to the plot, if a country is selected.
-
-[git:12_showtrace]()
-
-##
-```{r}
-g2 %>% 
-  # add_edges(c("historicData", "gapminderPlot",
-  #                  "year", "gapminderPlot")) %>% 
-  plot(layout = layout2)
-```
-
+- Replace the histogram with a gapminder plot, using `produceGapminderPlot()` [git:04_gapminderplot]()
+  - See `codeExample.R`
+- Replace the bins widget with a widget to select the year [git:05_yearwidget]()
+- Use the outputs of the widgets to make the graph interactive [git:06_interactive]()
 
 ## Deploying Shiny apps
 
