Add intro to the going further lessons

--- a/content/goingfurther/reactive.Rmd
+++ b/content/goingfurther/reactive.Rmd
@@ -43,13 +43,27 @@ Reactive expressions return a function, so we refer to the data we're plotting a
 
 ```
 
-The app will behave in the same way as before, but by defining the reactive expression `plotData()` we can use the data that we're plotting on the graph elsewhere in the app.
+The app will behave in the same way as before, but by defining the reactive expression `plotData()` we can use the data that we're plotting on the graph elsewhere in the app. [git:07_reactivedata]()
 
-## Exercise
+###  Exercise
 
-The `renderTable()` function will render a tibble, and `tableOutput()` will display it.   Use these functions, with the reactive data to display a (long) table containing the data displayed on the graph.
-  
-The `getRichestCountry()` function in `plottingFunctions.R` will return a tibble containing the name of the richest country in a tibble, and the country's GDP per capita. Modify your `renderTable()` function to only display this information for the displayed graph.
+- The `renderTable()` function will render a tibble, and `tableOutput()` will display it.   Use these functions, with the reactive data to display a (long) table containing the data displayed on the graph.
+
+### Solution
+
+[git:08_showplotdata]()
+
+
+{{% notice tip %}}
+There are two ways of displaying tabular data in Shiny.  `renderTable()` and `tableOutput()` will show a non-interactive tibble.  You can also use `renderDataTable()` and `dataTableOutput()` to give an interactive table that can be sorted, filtered etc.
+{{% /notice %}}
+
+
+- The `getRichestCountry()` function in `plottingFunctions.R` will return a tibble containing the name of the richest country in a tibble, and the country's GDP per capita. Modify your `renderTable()` function to only display this information for the displayed graph.
+
+### Solution
+
+[git:09_richcountry]()
 
 
 
