--- a/content/_index.Rmd
+++ b/content/_index.Rmd
@@ -2,7 +2,9 @@
 title: "Introduction to Shiny"
 ---
 
-# Introduction to Shiny
+This is the "Data Visualization Using Shiny" workshop for the 2018 [Research Software Engineers' Conference](http://rse.ac.uk/conf2018/)
+
+# Introduction
 
 Shiny lets us build interactive web apps, using R.   This means we can use (pretty much) all of R's extensive (and extensible) data analysis and visualisation features in our app.  Essentially, we can take almost any analysis we've done in R, and then make it interactive.   We can run our apps locally, within R Studio (this is what we'll do most of today), make them standalone, either by deploying them to a [Shiny Server](https://www.rstudio.com/products/shiny/shiny-server/), or to a hosting service, such as https://shinyapps.io (we'll do this today), or even including them in a Markdown document.
 
@@ -29,7 +31,14 @@ To minimise the amount of formatting of graphs etc, I've provided functions that
 
 The material we'll use for this workshop are in the `~/mawdsley` directory.  This contains the gapminder data we'll be plotting (`gapminder.rds`), the Shiny app we're going to be making (a deployed version of this is at https://mawds.shinyapps.io/worked_example/) (in `worked_example/`) and some example code showing how to produce (static) graphs of the gapminder data (in `codeExample.R`).  The example code uses the functions in `plottingFunctions.R` to produce the graphs; this is to reduce the time we spend dealing with the intricacies of ggplot2.
 
-The directory is a git repository.  Each commit is tagged, and represents the solution to an exercise.  (Not sure how best to do this part - either the user makes a *new* git repo in another directory and puts their exercise under version control _or_ creates the app within `~/mawdsley` and leaves their app out of version control, and checks out the various steps).  You can look at the diff for a commit within R Studio, or you can view it on github by clicking the link within the solution, e.g. [git:01_defaultapp]().
+The directory is a git repository.  Each commit is tagged, and represents the solution to an exercise, or a "checkpoint" in the workshop.   We'll start at the initial commit, [git:00_workshopdata](), which contains the data and functions we'll be using.   Links to the commits are clickable, and will show you the diff of that commit on github.  
 
+You should try the exercises in your own directory (outside of `~/mawdsley`). If you get stuck, or your code gets horribly broken you can checkout the appropriate commit in `~/mawdsley` by changing to that directory and using:
 
+```bash
+git checkout tagname
+```
 
+(For example, `git checkout 09_richcountry` will take you to the finished app.)
+
+You can then copy the working code to your directory and carry on from there.
