--- a/content/plotting/_index.Rmd
+++ b/content/plotting/_index.Rmd
@@ -13,6 +13,8 @@ pre: "<b>3. </b>"
 
 In order to avoid getting bogged down on the syntax of ggplot2, a function to produce a "gapminder" plot is provided in the `workshopFunctions.R` file, which we load at the start of our app (See [git:02_loaddata]() ).  This uses ggplot2 to produce a graph, deals with setting fixed axes, consistent colours etc.
 
+If you haven't already, set R's working directory to that of your app (`setwd("~/myworkshop/gapminder)`).  Then manually execute the lines of code that load the libraries, data and code by selecting them and pressing Ctrl+Enter. 
+
 Having loaded the data, libraries and functions, we can produce a gapminder plot in R using the following code:
 
 ```{r, include=FALSE}
