--- a/content/goingfurther/graphs/_index.Rmd
+++ b/content/goingfurther/graphs/_index.Rmd
@@ -63,13 +63,13 @@ You can also capture double click, hover and brush (e.g. selecting an area) even
 
 ### Exercise
 
-Capture click data from the graph, by setting the `click=` option.   Use `renderPrint()` in the server function, and `verbatimTextOuput()` in the UI to show the captured data.   Having clicked on the graph and obtained click data, try selecting another year or continent.  You will find that the click data disappears; as soon as the graph is redrawn the click event is invalidated (this is also the case if the graph is resized).  We'll deal with this issue later
+Capture click data from the graph, by setting the `click=` option.   Use `renderPrint()` in the server function, and `verbatimTextOuput()` in the UI to show the captured data.   Having clicked on the graph and obtained click data, try selecting another year or continent.  You will find that the click data disappears; as soon as the graph is redrawn the click event is invalidated (this is also the case if the graph is resized).  We'll deal with this issue later.
 
 ### Solution
 
 [git:10_clickdata]()
 
-## Which points are close to the data
+## Which points are close to the data?
 
 You may have noticed that the click data contains the x and y coordinates of where we clicked.  Shiny provides a function, `nearPoints(df, coordinfo)` which, given a tibble of input data and the clickdata returns a tibble the rows of data for points near the click (you can adjust the definition of "near" using the `threshold` option, and the maximum number of points returned using the `maxpoints` option)
 
@@ -86,27 +86,36 @@ Modify your `renderPrint()` function to return information on the country neares
 As soon as the graph is redrawn, the click event becomes invalidated.  Because of the reactive programming approach this means that Shiny recalulates all the clicks dependencies (such as the output), and returns no country information.  We need to store the country information, and only update this when a new click event is detected.  We need to do two things:
 
 1. Create a reactive value to store the currently selected country
-2. use the `observeEvent()` function to observe when a click occurs, and only then put the output of that click into the reactive value we created above.
+2. use the `observeEvent()` function to observe when a click occurs, and only *then* put the output of that click into the reactive value we created above.
 
-To do this, we modify the server function as follows [git:11_observeevent]():
+To do this, we modify the server function as follows [git:12_observeevent]():
 
 ```{r, eval = FALSE}
 # Create a reactive value to store the country we seleect
-activeCountry <- reactiveVal(value = NA)
+activeCountry <- reactiveVal()
 
 # Update the value of activeCountry() when we detect an input$plotClick event
 # (Note how we update a reactiveVal() )
 observeEvent(input$plotClick, 
              {
                nearCountry <- nearPoints(plotData(), input$plotClick, maxpoints = 1)
-               activeCountry(as.character(nearCountry$country))
+               activeCountry(as.character(nearCountry$country)) # Extract just the country name and assign it to activeCountry()
              })
 
-# Display the active country
+
+# Create a reactive value to store the country we seleect
+activeCountry <- reactiveVal(value = NA)
+```
+
+We'll also modify `output$clickData` to only display the active country:
+
+```{r, eval = FALSE}
 output$clickData <- renderPrint(({
   activeCountry()
 }))
 ```
+
+Run your app and check everything works.  Notice that `activeCountry()` is initalised to `NULL`.  If we click on the graph where there isn't a visible country, `nearPoints()` will, as we saw earlier, return a tibble with 0 rows.  When we extract the country from the tibble, using the `$` operator, it will return a character vector of length 0.
 
 ## Showing the country's historic data
 
@@ -118,15 +127,15 @@ Create a reactive data set, using `reactive()` which contains the historic data 
 
 ### Solution
 
-[git:12_historic]()
+[git:13_historic]()
 
 ### Exercise
 
-The final thing to do is to add the historic data to the plot, if a country is selected. Modify the `renderPlot()` to produce the regular graph if `is.na(activeCountry())` is `TRUE`, and to produce the  plot including the historic data otherwise (the code example at the start of the episode shows how to add historic data to a plot). 
+The final thing to do is to add the historic data to the plot, if a country is selected. Modify the `renderPlot()` to produce the regular graph if the length of `activeCountry()` is 0 (i.e. no country is selected), and to produce the  plot including the historic data otherwise (the code example at the start of the episode shows how to add historic data to a plot). 
 
 ### Solution
 
-[git:13_showhistoric]()
+[git:14_showhistoric]()
 
 
 
