--- a/WorkshopSlides.Rmd
+++ b/WorkshopSlides.Rmd
@@ -50,7 +50,7 @@ source("coursematerial/workshopFunctions.R")
 
 ##
 
-<iframe src="http://130.88.96.181/app/worked_example/" style="border:none; width:100%;  height:700px"></iframe>
+<iframe src="http://130.88.96.181:8080/app/worked_example/" style="border:none; width:100%;  height:700px"></iframe>
 
 ## Workshop Aims
 
